--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,8 +1,7 @@
-name: actions-trial
+name: GitHub Actions Demo
 on: [push]
 jobs:
-	check-bats-version:
-		runs-on: ubuntu-latest
-		steps:
-			- run: echo "first action!"
-
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
