--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,5 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: pwd
-      - run: bash culc-GCF-test.sh
+      - run: bash ./culc-GCF-test.sh
