--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - name: Check out repository code
+        uses: actions/checkout@v3
       - run: bash ./culc-GCF-test.sh
